--- a/src/main/webapp/resources/Style.css
+++ b/src/main/webapp/resources/Style.css
@@ -38,7 +38,7 @@ menu {
     font-size: 10px;
     width: 55px;
     height: 20px;
-    margin: 0 0 0 130px;
+    margin: 0 -120px 0 130px;
     padding: 0;
 }
 
